--- a/code_survey/static/src/scss/survey_templates_form.scss
+++ b/code_survey/static/src/scss/survey_templates_form.scss
@@ -1,10 +1,12 @@
-textarea[is="highlighted-code"] { 
-    width: 100%;
-    padding: 18px;
-    height: auto !important;
-}
 
 .o_survey_form, .o_survey_print, .o_survey_session_manage, .o_survey_quick_access {
+    textarea[is="highlighted-code"] { 
+        width: 100%;
+        padding: 18px;
+        min-height: 100px !important;
+        max-height: none;
+    }
+
     .o_survey_question_success {
         height: 0px;
         transition: height .5s ease;
@@ -17,7 +19,6 @@ textarea[is="highlighted-code"] {
     .o_survey_question_info {
         height: 0px;
         transition: height .5s ease;
-        line-height: 4rem;
         &.slide_in {
             height: auto;
         }
