--- a/code_survey/views/survey_templates_inherit.xml
+++ b/code_survey/views/survey_templates_inherit.xml
@@ -8,11 +8,10 @@
     </template>
 
     <template id="question_code_box" name="Question: code box">
-        <div class="o_survey_comment_container p-0">
-            <textarea is="highlighted-code" language="python" t-att-name="question.id" rows='3'
-            t-att-data-question-type="question.question_type"><t t-if="question.function_template != '' and not isTest and not answer_lines"><t t-esc="question.function_template"/></t><t t-if="isTest" t-out="valueTextArea"/>
-                <t t-if="answer_lines" t-esc="answer_lines[0].value_code_box or None"/></textarea>
-        </div>
+        <textarea is="highlighted-code" language="python" t-att-name="question.id" rows="3"
+            t-att-data-question-type="question.question_type"><t t-if="question.function_template != '' and not isTest and not answer_lines" 
+            t-esc="question.function_template"/><t t-if="isTest" t-out="valueTextArea"/><t t-if="answer_lines"
+            t-esc="answer_lines[0].value_code_box or None"/></textarea>
     </template>
 
     <template id="survey_fill_form_in_progress_inherit" inherit_id="survey.survey_fill_form_in_progress" name="Survey: form with questions inherit">
